# turboprop-rust

./: .gitignore  .turboprop.yml.example  CLAUDE.md  CODE_REVIEW.md  CONFIGURATION.md  Cargo.toml  INSTALLATION.md  MIGRATION.md  MODELS.md  README.md  RELEASE_CHECKLIST.md  TROUBLESHOOTING.md  VALIDATION_REPORT.md  build.rs  install-man-pages.sh  test_config.toml
.claude/commands/: tdd.md
benches/: glob_performance.rs  model_performance.rs  performance.rs
docs/: API.md  MCP_GUIDE.md
issues/: 000001_step.md  000002_step.md  000003_step.md  000004_step.md  000005_step.md  000006_step.md  000007_step.md  000008_step.md  000009_step.md  000010_step.md  000011_step.md  000012_step.md  000013_step.md  000015_step.md  000016_step.md  000017_step.md  000018_step.md  000019_step.md  000020_step.md  000021_step.md  000022_step.md  000023_step.md  000024_step.md  000025_step.md  000026_step.md  000030_step.md  000031_step.md  000032_step.md  000033_step.md  000034_step.md
issues/complete/: 000003_step.md  000004_step.md  000005_step.md  000006_step.md  000009_step.md  000010_step.md  000012_step.md  000014_step.md  000020_step.md  000021_step.md  000022_step.md  000023_step.md  000024_step.md  000025_step.md  000026_step.md  000027_step.md  000028_step.md  000029_step.md  000030_step.md  000031_step.md  000032_step.md  000034_step.md
scripts/: integration_test_all_models.sh  performance_validation.sh
specifications/: mcp.md  model-support.md  rust-tp.md  unit-test-performance.md
specifications/config-models/: 000021_step.md  000022_step.md  000025_step.md  000026_step.md  000028_step.md  000030_step.md
src/: chunking.rs  cli.rs  compression.rs  config.rs  constants.rs  content.rs  embeddings.rs  error.rs  error_classification.rs  error_utils.rs  files.rs  filters.rs  git.rs  incremental.rs  index.rs  lib.rs  main.rs  metrics.rs  model_validation.rs  models.rs  output.rs  parallel.rs  pipeline.rs  progress.rs  query.rs  recovery.rs  retry.rs  search.rs  storage.rs  streaming.rs  types.rs  validation.rs  warnings.rs  watcher.rs
src/backends/: gguf.rs  huggingface.rs  mod.rs
src/backends/huggingface/: backend.rs  config.rs  download.rs  mod.rs  model.rs  validation.rs
src/commands/: benchmark.rs  index.rs  mcp.rs  mod.rs  model.rs  search.rs
src/embeddings/: backends.rs  batch.rs  config.rs  generator.rs  mock.rs  mod.rs  optimized.rs
src/mcp/: error.rs  index_manager.rs  lifecycle_manager.rs  mod.rs  protocol.rs  protocol_handler.rs  server.rs  tool_executor.rs  tools.rs  transport.rs
src/types/: chunks.rs  files.rs  indexing.rs  mcp.rs  mod.rs  models.rs  similarity.rs
tests/: benchmark_tests.rs  chunking_tests.rs  cli_model_tests.rs  cli_tests.rs  common.rs  complete_workflow_tests.rs  config_model_tests.rs  embedding_tests.rs  error_handling_tests.rs  gguf_backend_tests.rs  glob_edge_cases.rs  glob_integration_tests.rs  index_tests.rs  integration_tests.rs  mcp_common.rs  mcp_property_tests.rs  mcp_realworld_scenarios.rs  mcp_security_tests.rs  mcp_server_integration_test.rs  mcp_tests.rs  mcp_tool_exposure_tests.rs  mcp_unit_tests.rs  metrics_tests.rs  model_command_tests.rs  model_error_tests.rs  model_integration_tests.rs  optimized_embedding_tests.rs  pipeline_integration_tests.rs  qwen3_backend_tests.rs  qwen3_tests.rs  recovery_tests.rs  retry_tests.rs  search_tests.rs  tool_executor_changes_tests.rs  warnings_tests.rs  watch_tests.rs
tests/fixtures/poker/: .turboprop.yml  README.md  package-lock.json  package.json  turboprop.toml
tests/fixtures/poker/src/pages/: _app.tsx  _document.tsx  index.tsx
tests/fixtures/poker/src/pages/room/: [id].tsx
tests/fixtures/poker/src/widgets/: Histogram.tsx  InputName.tsx  Nav.tsx  Player.tsx  PlayingCard.tsx  SelectEstimate.tsx
tests/integration/: binary_tests.rs  embedding_tests.rs  library_tests.rs  mcp_tests.rs  mod.rs  search_tests.rs
todos/: mcp.md
todos/config-models/: 000019_step.md  000020_step.md  000023_step.md  000024_step.md  000027_step.md  000029_step.md
