[package]
name = "turboprop"
version = "0.1.0"
edition = "2021"
authors = ["Turboprop Contributors"]
description = "Fast semantic code search and indexing tool"
readme = "README.md"
repository = "https://github.com/your-org/turboprop-rust"
license = "MIT OR Apache-2.0"
keywords = ["search", "code", "semantic", "indexing", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["test_dir/", "sample-codebases/", "issues/", "benches/"]

[[bin]]
name = "tp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
git2 = "0.18"
walkdir = "2.4"
encoding_rs = "0.8"
unicode-segmentation = "1.10"
fastembed = "5.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
dirs = "5.0"
bincode = "1.3"
memmap2 = "0.9"
serde_yaml = "0.9"
rayon = "1.7"
indicatif = "0.17"
humantime = "2.1"
notify = "6.1"
signal-hook = "0.3"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
sys-info = "0.9"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
walkdir = "2.4"

[build-dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_mangen = "0.2"

[[bench]]
name = "performance"
harness = false
