[package]
name = "turboprop"
version = "0.1.0"
edition = "2021"
authors = ["Turboprop Contributors"]
description = "Fast semantic code search and indexing tool"
readme = "README.md"
repository = "https://github.com/your-org/turboprop-rust"
license = "MIT OR Apache-2.0"
keywords = ["search", "code", "semantic", "indexing", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["test_dir/", "sample-codebases/", "issues/", "benches/"]

[[bin]]
name = "tp"
path = "src/main.rs"

# Integration tests (slow tests that spawn processes or do ML work)
[[test]]
name = "integration"
path = "tests/integration/mod.rs"
harness = true
test = false

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
git2 = "0.18"
walkdir = "2.4"
encoding_rs = "0.8"
unicode-segmentation = "1.10"
fastembed = "5.0"
# Candle framework for ML model loading (supports GGUF)
candle-core = "0.9"
candle-transformers = "0.9" 
candle-nn = "0.9"
# For direct Hugging Face model access
hf-hub = "0.4"
tokenizers = "0.21"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
dirs = "5.0"
bincode = "1.3"
memmap2 = "0.9"
serde_yaml = "0.9"
rayon = "1.7"
indicatif = "0.17"
humantime = "2.1"
notify = "6.1"
signal-hook = "0.3"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
sys-info = "0.9"
glob = "0.3"
lru = "0.12"  # For embedding caching
tabled = "0.15"  # For benchmark table output
# MCP Protocol Support (minimal additions)
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"

[features]
default = []
test-utils = []

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
walkdir = "2.4"
assert_cmd = "2.0"
predicates = "3.0"
# Enable test-utils feature for all tests (including integration tests)
turboprop = { path = ".", features = ["test-utils"] }

[build-dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_mangen = "0.2"

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "glob_performance"
harness = false
